tests/baselines/reference/higherKindedTypes.errors.txt
tests/cases/compiler/higherKindedTypes.ts(5,11): error TS2430: Interface 'FunctorX<A>' incorrectly extends interface 'Functor<A, FunctorX<A>>'.
  Types of property 'map' are incompatible.
    Type '<B>(f: (a: A) => B) => FunctorX<B>' is not assignable to type '<B>(f: (a: A) => B) => FunctorX<A>'.
      Type 'FunctorX<B>' is not assignable to type 'FunctorX<A>'.
        Type 'B' is not assignable to type 'A'.
tests/cases/compiler/higherKindedTypes.ts(10,11): error TS2430: Interface 'FunctorY<A>' incorrectly extends interface 'Functor<A, FunctorY<A>>'.
  Types of property 'map' are incompatible.
    Type '<B>(f: (a: A) => B) => FunctorY<B>' is not assignable to type '<B>(f: (a: A) => B) => FunctorY<A>'.
      Type 'FunctorY<B>' is not assignable to type 'FunctorY<A>'.
        Type 'B' is not assignable to type 'A'.
tests/cases/compiler/higherKindedTypes.ts(33,5): error TS2322: Type 'F<A>' is not assignable to type 'F<B>'.
  Type 'A' is not assignable to type 'B'.
tests/cases/compiler/higherKindedTypes.ts(37,5): error TS2322: Type 'F<A>' is not assignable to type 'F<B>'.
  Type 'A' is not assignable to type 'B'.


==== tests/cases/compiler/higherKindedTypes.ts (4 errors) ====
    interface Functor<A, Container<_T>> {
        map<B>(f: (a: A) => B): Container<B>;
    }
    
    interface FunctorX<A> extends Functor<A, FunctorX> {
              ~~~~~~~~
!!! error TS2430: Interface 'FunctorX<A>' incorrectly extends interface 'Functor<A, FunctorX<A>>'.
!!! error TS2430:   Types of property 'map' are incompatible.
!!! error TS2430:     Type '<B>(f: (a: A) => B) => FunctorX<B>' is not assignable to type '<B>(f: (a: A) => B) => FunctorX<A>'.
!!! error TS2430:       Type 'FunctorX<B>' is not assignable to type 'FunctorX<A>'.
!!! error TS2430:         Type 'B' is not assignable to type 'A'.
        map<B>(f: (a: A) => B): FunctorX<B>;
        xVal: string;
    }
    
    interface FunctorY<A> extends Functor<A, FunctorY> {
              ~~~~~~~~
!!! error TS2430: Interface 'FunctorY<A>' incorrectly extends interface 'Functor<A, FunctorY<A>>'.
!!! error TS2430:   Types of property 'map' are incompatible.
!!! error TS2430:     Type '<B>(f: (a: A) => B) => FunctorY<B>' is not assignable to type '<B>(f: (a: A) => B) => FunctorY<A>'.
!!! error TS2430:       Type 'FunctorY<B>' is not assignable to type 'FunctorY<A>'.
!!! error TS2430:         Type 'B' is not assignable to type 'A'.
        map<B>(f: (a: A) => B): FunctorY<B>;
        yVal: A;
    }
    
    declare const initialX: FunctorX<string>;
    declare const initialY: FunctorY<string>;
    
    const resultX1 = initialX.map(val => val.length);
    const expectX1: FunctorX<number> = resultX1;
    
    const resultY1 = initialY.map(val => val.length);
    const expectY1: FunctorY<number> = resultY1;
    
    const resultX2 = initialX.map(val => [val]);
    const expectX2: FunctorX<string[]> = resultX2;
    
    const resultY2 = initialY.map(val => [val]);
    const expectY2: FunctorY<string[]> = resultY2;
        
    
    function staticMap<F<_T> extends Functor<_T, F>, A, B>(fa: F<A>, f: (a: A) => B): F<B> {
        const result = fa.map(f);
        return result;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'F<A>' is not assignable to type 'F<B>'.
!!! error TS2322:   Type 'A' is not assignable to type 'B'.
    }
    
    function staticMapBadImplementation<F<_T> extends Functor<_T, F>, A, B>(fa: F<A>, f: (a: A) => B): F<B> {
        return fa;
        ~~~~~~~~~~
!!! error TS2322: Type 'F<A>' is not assignable to type 'F<B>'.
!!! error TS2322:   Type 'A' is not assignable to type 'B'.
    }
    
    const resultX3 = staticMap(initialX, val => val.length);
    const expectX3: FunctorX<number> = resultX3;
    
    const resultY3 = staticMap(initialY, val => val.length);
    const expectY3: FunctorY<number> = resultY3;
    
    const resultX4 = staticMap(initialX, val => [val]);
    const expectX4: FunctorX<string[]> = resultX4;
    
    const resultY4 = staticMap(initialY, val => [val]);
    const expectY4: FunctorY<string[]> = resultY4;
    